fix overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,12 +8,18 @@
 
 html {
   font-size: 62.5%;
+  width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 body {
   color: #333333;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 button {
@@ -173,4 +179,13 @@ a {
 .empty-message {
     text-align: center;
     margin: 3.2rem 0;
+}
+
+@media only screen and (max-width: 400px) {
+    .actions__container {
+        padding: 0;
+    }
+    .input {
+        padding: .4rem .4rem;
+    }
 }
